<resources>
    <string name="app_name">e4client</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">E4 Client</string>
    <string name="nav_header_subtitle">github.com/j05t/e4client</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_about">About</string>

    <string name="menu_connect">Connect</string>
    <string name="menu_charts">Charts</string>
    <string name="menu_sessions">Sessions</string>
    <string name="menu_tools">Settings</string>
    <string name="menu_share">Share CSV</string>
    <string name="menu_google_fit_sessions">Google Fit</string>

    <string name="accel">Accelerometers</string>
    <string name="accel_x">x:</string>
    <string name="accel_y">y:</string>
    <string name="accel_z">z:</string>
    <string name="bvp_label">Blood volume pulse</string>
    <string name="eda_label">Electrodermal activity</string>
    <string name="ibi_label">Interbeat interval</string>
    <string name="hr_label">Heart rate</string>
    <string name="emptyText">-</string>
    <string name="temp_label">Temperature</string>
    <string name="battery_label">Battery</string>
    <string name="menu_home">Home</string>
    <string name="microsiemens">μS</string>
    <string name="celsius">°C</string>

    <string name="credits">Custom client for the E4 wristband from Empatica. Visit www.empatica.com/research/e4 for official documentation and support. This application is not affiliated in any way with Empatica.\n\nDeveloped for the eHealth department of the University of Applied Sciences FH Joanneum Graz. Source code available at github.com/j05t/e4client.\n\nCharting library provided by www.scichart.com. Icons made by Freepik, Smashicons, hirschwolf, srip from www.flaticon.com.</string>
    <string name="settings_description">Insert your Empatica account username and password here to enable session data synchronisation with Empatica cloud storage.\n\nInsert the API key (www.empatica.com/connect/developer.php) to be able to connect to your E4 via Bluetooth.</string>
    <string name="upload_to_google_fit">Upload to Google Fit</string>
    <string name="download_all">Download All</string>
    <string name="sync_with_empatica">Sync with Empatica</string>
</resources>
