<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.jstappdev.e4client.MainActivity">


        <TextView
            android:id="@+id/status"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:textAlignment="center"
            android:textSize="30sp" />

        <LinearLayout
            android:id="@+id/dataArea"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/accel_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/accel"
                android:textSize="30sp" />

            <LinearLayout
                android:id="@+id/accel_area"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:text="@string/accel_x"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/accel_x"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:width="50dp"
                    android:text="@string/emptyText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accel_y"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/accel_y"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:width="50dp"
                    android:text="@string/emptyText"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/accel_z"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/accel_z"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:width="50dp"
                    android:text="@string/emptyText"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/bvp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/bvp_label"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/bvp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/emptyText"
                    android:textSize="30sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eda_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/eda_label"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/eda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/emptyText"
                    android:textSize="30sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ibi_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/ibi_label"
                    android:textSize="30sp" />

                <TextView
                    android:id="@+id/ibi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:text="@string/emptyText"
                    android:textSize="30sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/batteryImageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_battery_full" />

                <TextView
                    android:id="@+id/battery"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emptyText"
                    android:textSize="30sp"
                    tools:text="100%" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_thermometer" />

                <TextView
                    android:id="@+id/temperature"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/emptyText"
                    android:textSize="30sp"
                    tools:text="37°" />
            </LinearLayout>


            <TextView
                android:id="@+id/wrist_status_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/emptyText" />

            <Button
                android:id="@+id/disconnectButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="STOP STREAMING"
                android:textSize="24sp" />


        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>